--- a/.drone.yml
+++ b/.drone.yml
@@ -11,6 +11,7 @@ trigger:
     exclude:
     - tag
 
+steps:
 - name: shellcheck
   image: debian:stretch-slim
   pull: always
@@ -54,6 +55,7 @@ trigger:
   event:
     - tag
 
+steps:
 - name: download tar.gz
   image: plugins/download
   settings:
